# nacre

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVIATIONS.md  NOTICE  PROMPTS.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/nacre/: Cargo.toml
crates/nacre-core/: Cargo.toml
crates/nacre-core/examples/: live_smoke.rs
crates/nacre-core/src/: lib.rs  pipeline.rs  schemas.rs
crates/nacre-core/src/dedupe/: mod.rs  nodes.rs
crates/nacre-core/src/extract/: edges.rs  mod.rs  nodes.rs
crates/nacre-core/src/model/: claude.rs  mod.rs  openai_embed.rs  prompted.rs  recording.rs
crates/nacre-core/src/prompts/: dedupe_nodes.rs  extract_edges.rs  extract_nodes.rs  helpers.rs  mod.rs  snippets.rs  summarize_nodes.rs
crates/nacre-core/src/search/: mod.rs
crates/nacre-core/src/summarize/: mod.rs  nodes.rs
crates/nacre-core/tests/: conformance.rs  prompt_fidelity.rs
crates/nacre-core/tests/fixtures/prompts/: dedupe_edges.json  dedupe_nodes.json  extract_edges.json  extract_nodes.json  summarize_nodes.json
crates/nacre-node/: Cargo.toml  README.md  package-lock.json  package.json
crates/nacre-node/examples/viz/: README.md  dump-graph.mjs  graph.data.js  graph.json  viewer.html
crates/nacre-node/scripts/: live-smoke.mjs
crates/nacre-node/sidecar/: README.md  sidecar.mjs
crates/nacre-node/src/: lib.rs  providers.rs  rows.rs
crates/nacre-node/test/: host.test.mjs  memory.test.mjs  sidecar.test.mjs
crates/nacre/examples/: live_smoke.rs
crates/nacre/src/: lib.rs
crates/nacre/src/dedupe/: edges.rs  helpers.rs
crates/nacre/src/extract/: mod.rs
crates/nacre/src/model/: claude.rs  mod.rs  recording.rs
crates/nacre/src/prompts/: dedupe_edges.rs  py.rs
crates/nacre/tests/: conformance.rs  prompt_fidelity.rs
integrations/hermes/: README.md  hermes_real_check.py  install.sh  live_smoke.py  pyproject.toml
integrations/hermes/nacre/: __init__.py  _sidecar.py  plugin.yaml
integrations/hermes/tests/: conftest.py  test_hermes_real.py  test_provider.py
oracle/: .env.example  README.md  capture.py  docker-compose.yml  pyproject.toml  recording_clients.py
oracle/episodes/: trace1.json  trace2.json
oracle/fixtures/trace1/: embedder_recordings.json  episodes.json  graph_state.json  llm_recordings.json  meta.json  retrieval.json
oracle/fixtures/trace2/: embedder_recordings.json  episodes.json  graph_state.json  llm_recordings.json  meta.json  retrieval.json
oracle/promptgen/: gen_prompt_fixtures.py
