[workspace]
resolver = "3"
members = ["crates/nacre-core"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/bofeizhu/nacre"
readme = "README.md"
keywords = ["knowledge-graph", "agent", "memory", "llm", "extraction"]
categories = ["science"]

# Co-development against a local grit checkout (see ../CLAUDE.md): add an
# UNCOMMITTED override here —
# [patch.crates-io]
# grit-core = { path = "../grit/crates/grit-core" }
