[workspace]
resolver = "3"
members = ["crates/nacre-core", "crates/nacre-node"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/bofeizhu/nacre"
readme = "README.md"
keywords = ["agent-memory", "knowledge-graph", "graphiti", "llm", "sqlite"]
categories = ["artificial-intelligence", "database", "data-structures", "text-processing"]

# Co-development against a local grit checkout (see ../CLAUDE.md): add an
# UNCOMMITTED override here —
# [patch.crates-io]
# grit-core = { path = "../grit/crates/grit-core" }
