[package]
name = "nacre-core"
description = "LLM extraction pipeline for agent memory — Graphiti's pipeline ported to Rust on grit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# blake2b(digest_size=8) matches upstream dedup_helpers' shingle hashing —
# MinHash signatures must be bit-identical to Python's.
blake2 = "0.10"
grit-core = "0.1"
serde = { version = "1.0", features = ["derive"] }
# preserve_order matters: prompt rendering reproduces Python dict insertion
# order (f-string repr and json.dumps), which BTreeMap ordering would break.
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
